--- a/skmerWeb/query/templates/query/viewQueries.html
+++ b/skmerWeb/query/templates/query/viewQueries.html
@@ -63,6 +63,10 @@
       </p>
     {% endfor %}
 <button class="btn btn-success btn-lg" type="submit">Upload Files</button>
+         <br><br>
+            Don't have a fna/fastq file ? <a href="/skmerCore/example.fastq" target="blank" download><strong>Get a sample here</strong></a>!
+
+
   </form>
          </br>
 </div>
